--- a/webshop/src/Seiten/Startseite/Startseite.css
+++ b/webshop/src/Seiten/Startseite/Startseite.css
@@ -1,12 +1,12 @@
 .grid-container_Start {
     display: grid;
-    grid-template-columns: 30vw 20vw 15vw 25vw 10vw;
+    grid-template-columns: 90vw 10vw;
     grid-template-rows: 15vh 15vh  30vh;
     gap: 0px 5px;
     grid-template-areas:
-      "Überschrift Überschrift Überschrift Überschrift Button"
-      "Beschreibung Beschreibung Beschreibung Beschreibung Beschreibung"
-      ". . . . .";
+      "Überschrift Button"
+      "Beschreibung Beschreibung"
+      ". .";
   }
 .Überschrift_Start {
     background: red;  
@@ -29,7 +29,7 @@
   background: tomato;
   display: grid;
   grid-column-start: 1;
-  grid-column-end: 6;
+  grid-column-end: 3;
   grid-row-start: 3;
   grid-row-end: 4;
   grid-gap: 10px;
