--- a/webshop/src/Seiten/Formularseite/Formularseite.css
+++ b/webshop/src/Seiten/Formularseite/Formularseite.css
@@ -1,7 +1,8 @@
 .grid-container_Formular {
+    background: beige;
     display: grid;
     grid-template-columns: 66vw 24vw 10vw;
-    grid-template-rows: 15vh 10vh 30vh;
+    grid-template-rows: 15vh 10vh 75vh;
     gap: 0px 5px;
     grid-template-areas:
       "Überschrift Überschrift Button"
@@ -9,18 +10,18 @@
       ". Preise Preise";
   }
 .Überschrift_Formular {
-    background: red;  
+    background: grey;  
     grid-area: Überschrift; 
 }
 
 
 .Button_Formular { 
-    background:white;
+    background:grey;
     grid-area: Button;
 }
 
 .Datenübersicht_Formular { 
-    background: blue;
+    background: beige;
     grid-area: Produktübersicht;
 }
 
@@ -28,18 +29,18 @@
 
 .Daten_Formular {
     display: grid;
-    background:turquoise;
+    background:beige;
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 3;
     grid-row-end: 4;
-    height: 100%;
+    height: 60vh;
     grid-gap: 5px;
     grid-template-columns: 20vw 45vw;
   }
 
 
 .Preise_Formular {
-    background: violet;  
+    background: beige;  
     grid-area: Preise; 
 }
