--- a/webshop/src/Seiten/Warenkorbseite/Warenkorbseite.css
+++ b/webshop/src/Seiten/Warenkorbseite/Warenkorbseite.css
@@ -1,7 +1,8 @@
 .grid-container_Warenkorb {
+    background: beige;
     display: grid;
     grid-template-columns: 66vw 24vw 10vw;
-    grid-template-rows: 15vh 10vh 30vh;
+    grid-template-rows: 15vh 10vh 75vh;
     gap: 0px 5px;
     grid-template-areas:
       "Überschrift Überschrift Button"
@@ -9,36 +10,37 @@
       ". Preise Preise";
   }
 .Überschrift_Warenkorb {
-    background: red;  
+    background: grey;  
     grid-area: Überschrift; 
 }
 
 
 .Button_Warenkorb { 
-    background:white;
+    background:grey;
     grid-area: Button;
 }
 
 .Produktübersicht_Warenkorb { 
-    background: blue;
+    background: beige;
     grid-area: Produktübersicht;
 }
 
 
 .Produkte_Warenkorb {
-  background: tomato;
+  background: beige;
   display: grid;
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 3;
   grid-row-end: 4;
   grid-gap: 10px;
+  height: 30vh;
   grid-template-columns: repeat(auto-fill)
 }
 
 .Bild_Warenkorb {
     display: grid;
-    background:turquoise;
+    background:beige;
     height: 100%;
     grid-gap: 5px;
     grid-template-columns: 15vw 50vw;
@@ -46,20 +48,20 @@
 
 .PB_Warenkorb {
     display: grid;
-    background: yellow;
+    background: beige;
     height: 100%;
     grid-gap: 5px;
 }
 
 .Menge_Warenkorb {
     display: grid;
-    background: red;
+    background: beige;
     height: 100%;
     grid-gap: 5px;
     grid-template-columns: 20vw 20vw 10vw;
 }
 
 .Preise_Warenkorb {
-    background: violet;  
+    background: beige;  
     grid-area: Preise; 
 }
