--- a/webshop/src/Seiten/Formularseite/Formularseite.css
+++ b/webshop/src/Seiten/Formularseite/Formularseite.css
@@ -2,7 +2,7 @@
     background: beige;
     display: grid;
     grid-template-columns: 66vw 24vw 10vw;
-    grid-template-rows: 15vh 10vh 75vh;
+    grid-template-rows: 10vh 10vh 80vh;
     gap: 0px 5px;
     grid-template-areas:
       "Überschrift Überschrift Button"
@@ -11,6 +11,7 @@
   }
 .Überschrift_Formular {
     background: grey;  
+    text-align: center;
     grid-area: Überschrift; 
 }
 
@@ -18,6 +19,7 @@
 .Button_Formular { 
     background:grey;
     grid-area: Button;
+    text-align: center;
 }
 
 .Datenübersicht_Formular { 
