--- a/webshop/src/Seiten/Warenkorbseite/Warenkorbseite.css
+++ b/webshop/src/Seiten/Warenkorbseite/Warenkorbseite.css
@@ -2,7 +2,7 @@
     background: beige;
     display: grid;
     grid-template-columns: 66vw 24vw 10vw;
-    grid-template-rows: 15vh 10vh 75vh;
+    grid-template-rows: 10vh 10vh 80vh;
     gap: 0px 5px;
     grid-template-areas:
       "Überschrift Überschrift Button"
@@ -11,6 +11,7 @@
   }
 .Überschrift_Warenkorb {
     background: grey;  
+    text-align: center;
     grid-area: Überschrift; 
 }
 
@@ -18,9 +19,11 @@
 .Button_Warenkorb { 
     background:grey;
     grid-area: Button;
+    text-align: center;
 }
 
 .Produktübersicht_Warenkorb { 
+    width: 100.5vw;
     background: beige;
     grid-area: Produktübersicht;
 }
