--- a/webshop/src/Seiten/Formularseite/Formularseite.css
+++ b/webshop/src/Seiten/Formularseite/Formularseite.css
@@ -12,7 +12,10 @@
 .Überschrift_Formular {
     background: grey;  
     text-align: center;
-    grid-area: Überschrift; 
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2; 
 }
 
 
