--- a/webshop/src/Seiten/Bestaetigungsseite/Bestaetigungsseite.css
+++ b/webshop/src/Seiten/Bestaetigungsseite/Bestaetigungsseite.css
@@ -18,7 +18,7 @@
     margin: 10px;
 }
 
-.Feuerwerk_Bestaetigung {
+.Wein_Bestaetigung {
     background: beige; 
     grid-area: Feuerwerk; 
     text-align: center;
