--- a/webshop/src/Seiten/Formularseite/Formularseite.css
+++ b/webshop/src/Seiten/Formularseite/Formularseite.css
@@ -2,11 +2,12 @@
     background: beige;
     display: grid;
     grid-template-columns: 66vw 24vw 10vw;
-    grid-template-rows: 10vh 10vh 80vh;
+    grid-template-rows: 10vh 10vh 40vh 40vh;
     gap: 0px 5px;
     grid-template-areas:
       "Überschrift Überschrift Button"
       "Produktübersicht . ."
+      ". Preise Preise"
       ". Preise Preise";
   }
 .Überschrift_Formular {
@@ -43,6 +44,24 @@
     grid-column-end: 2;
     grid-row-start: 3;
     grid-row-end: 4;
+    height: 40vh;
+    grid-gap: 5px;
+    margin: 20px;
+    padding-left: 30px;
+    font-size: 20px;
+    border-right-style: solid;
+    border-color: gray;
+    border-width: 5px;
+    grid-template-columns: 20vw 45vw;
+  }
+
+  .Dropdown_Formular {
+    display: grid;
+    background:beige;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 4;
+    grid-row-end: 5;
     height: 60vh;
     grid-gap: 5px;
     margin: 20px;
