--- a/webshop/src/Seiten/Startseite/Startseite.css
+++ b/webshop/src/Seiten/Startseite/Startseite.css
@@ -47,7 +47,7 @@
   grid-row-start: 3;
   grid-row-end: 4;
   grid-gap: 10px;
-  height: 30vh;
+  height: 25vh;
   padding-top: 30px;
   grid-template-columns: repeat(auto-fill)
 }
@@ -55,17 +55,18 @@
 .Bild_Start {
     display: grid;
     background:beige;
-    height: 100%;
+    height: 300px;
     grid-gap: 5px;
-    grid-template-columns: 30vw 70vw;
+    padding-left: 20px;
+    grid-template-columns: 15vw 85vw;
     margin: 20px;
   }
 
 .PB_Start {
     display: grid;
+    font-size: 18px;
     background: beige;
-    height: 100%;
-    grid-gap: 5px;
+    height: 300px;
 }
 
 .Menge_Start {
@@ -73,6 +74,9 @@
     background: beige;
     height: 100%;
     grid-gap: 5px;
-    grid-template-columns: 20vw 15vw 25vw;
+    grid-template-columns: 5vw 5vw 10vw;
 }
 
+.image_start {
+    height: 300px;
+}
