--- a/webshop/src/Seiten/Warenkorbseite/Warenkorbseite.css
+++ b/webshop/src/Seiten/Warenkorbseite/Warenkorbseite.css
@@ -68,7 +68,7 @@
     background: beige;
     height: 100%;
     grid-gap: 5px;
-    grid-template-columns: 20vw 20vw 10vw;
+    grid-template-columns: 3vw 2vw 2vw 3vw 10vw;
 }
 
 .Preise_Warenkorb {
