--- a/webshop/src/Seiten/Formularseite/Formularseite.css
+++ b/webshop/src/Seiten/Formularseite/Formularseite.css
@@ -1,24 +1,16 @@
 .grid-container_Formular {
     background: beige;
     display: grid;
-    grid-template-columns: 66vw 22vw 10vw;
-    grid-template-rows: 10vh 10vh 40vh 40vh;
+    grid-template-columns: 66vw  22vw 10vw;
+    grid-template-rows: 10vh 10vh 10vh 20vh 40vh;
     gap: 0px 5px;
     grid-template-areas:
       "Überschrift Überschrift Button"
-      "Produktübersicht  . ."
+      "Datenübersicht  . ."
+      ". Preisübersicht ."
       ". Preise Preise "
-      ". Preise Preise ";
+      ". . .";
   }
-.Überschrift_Formular {
-    background: grey;  
-    text-align: center;
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row-start: 1;
-    grid-row-end: 2; 
-    margin: 10px;
-}
 
 
 .Button_Formular { 
@@ -30,7 +22,7 @@
 
 .Datenübersicht_Formular { 
     background: beige;
-    grid-area: Produktübersicht;
+    grid-area: Datenübersicht;
     margin: 20px;
     
 }
@@ -43,48 +35,13 @@
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 3;
-    grid-row-end: 4;
+    grid-row-end: 6;
     height: 40vh;
     grid-gap: 5px;
     margin: 20px;
     padding-left: 30px;
     font-size: 20px;
-    border-right-style: solid;
-    border-color: gray;
-    border-width: 5px;
     grid-template-columns: 20vw 45vw;
   }
-
-  .Dropdown_Formular {
-    display: grid;
-    background:beige;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 4;
-    grid-row-end: 5;
-    height: 60vh;
-    grid-gap: 5px;
-    margin: 20px;
-    padding-left: 30px;
-    font-size: 20px;
-    border-right-style: solid;
-    border-color: gray;
-    border-width: 5px;
-    grid-template-columns: 20vw 45vw;
-  }
-
-
-.Preise_Formular {
-    background: beige;  
-    grid-area: Preise;
-    margin: 20px;
-    width: 15vw;
-    grid-template-columns: 12vw 7vw;
-}
-
-.spacer {
-  padding-top: 20px;
-}
-
 
 
