--- a/webshop/src/Seiten/Formularseite/Formularseite.css
+++ b/webshop/src/Seiten/Formularseite/Formularseite.css
@@ -2,7 +2,7 @@
     background: beige;
     display: grid;
     grid-template-columns: 66vw  22vw 10vw;
-    grid-template-rows: 10vh 10vh 10vh 20vh 40vh;
+    grid-template-rows: 10vh 10vh 10vh 70vh;
     gap: 0px 5px;
     grid-template-areas:
       "Überschrift Überschrift Button"
@@ -36,7 +36,7 @@
     grid-column-end: 2;
     grid-row-start: 3;
     grid-row-end: 6;
-    height: 40vh;
+    height: 70vh;
     grid-gap: 5px;
     margin: 20px;
     padding-left: 30px;
